[package]
name = "fhiyo-machine-learning-sandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }
plotters = "0.3.1"

[features]
